--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -42,9 +42,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
     implementation 'androidx.cardview:cardview:1.0.0'
-
-    implementation 'net.danlew:android.joda:2.10.6'
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'net.danlew:android.joda:2.10.7.2'
 
 }
