--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
     implementation 'net.danlew:android.joda:2.10.9.1'
 
 }
